--- a/css/style.css
+++ b/css/style.css
@@ -4259,3 +4259,613 @@ margin-left: 10px;
         width: 10px;
     }
 }
+@media(max-width:340px){
+     .item-link{
+        font-size: 10px;
+  margin-right: 15px;
+    }
+    .item-link:after {
+  height: 1px;
+}
+    .first-body {
+  height: 300px;
+  padding-top: 0px;
+}
+    .main-nav{
+    margin-right: 10px;
+        display: none;
+}
+    .logo{
+        margin-left: 0px;
+        margin-right: 50px;
+        margin-top: 30px;
+        font-size: 15px;
+    }
+
+    .header{
+        max-width: 320px;
+    }
+    .register-button{
+        font-size: 12px;
+        width: 100px;
+        height: 25px;
+        margin-top: 20px;
+        display: none;
+    }
+    .subheading{
+        margin-bottom: 20px;
+        margin-left: 15px;
+        font-size: 15px;
+        line-height: 20px;
+        max-width: 335px;
+    }
+    .more-button{
+        margin-left: 15px;
+        width: 120px;
+        height: 35px;
+        font-size: 18px;
+    }
+    .heading{
+        margin-left: 15px;
+        margin-top: 10px;
+        max-width: 300px;
+        font-size: 25px;
+        line-height: 35px;
+    }
+    .second-illustration{
+        top: 145px;
+        width: 110px;
+        right: 15px;
+    }
+    .secondpart{
+height: 230px;
+    }
+    .d-info{
+        left: 0px;
+        width: 340px;
+    }
+    .d-heading{
+        font-size: 25px;
+        margin-bottom: 5px;
+    }
+    .d-text{
+        font-size: 17px;
+        line-height: 30px;
+    }
+    .smallimgs{
+width: 40px;
+        height: 40px;
+    }
+    .adv-header{
+        margin-bottom:13px;
+        font-size: 15px;
+    }
+    .third-heading{
+        font-size: 25px;
+        height: 15%;
+    }
+    .adv-text{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+        max-width: 120px;
+    }
+    .plane{
+width: 70%;
+    }
+    .contact{
+        height: 150px;
+    }
+    .contact-heading{
+        top: 100px;
+        font-size: 15px;
+        right: 8px;
+    }
+    .contact-btn{
+right: 10px;
+        width: 100px;
+        height: 30px;
+        font-size: 15px;
+    }
+     .register-block {
+  height: 200px;
+}
+    .tabs-button{
+font-size: 15px;
+    }
+    .register-heading {
+  font-size: 15px;
+  line-height: 30px;
+  max-width: 350px;
+  margin-bottom: 25px;
+}
+.register-btn {
+  width: 150px;
+  height: 40px;
+  font-weight: 300;
+  font-size: 20px;
+}
+  .instagram {
+  height: 250px;
+}
+.i-phone{
+    margin-right: 10px;
+    height: 50%;
+    width: 80px;
+margin-left: 10px;
+}
+.i-heading {
+  font-size: 18px;
+  line-height: 20px;
+    margin-bottom: 0px;
+}
+.i-text {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+    margin-bottom: 10px;
+}
+.instagram-text{
+    width: 220px;
+    margin-left: 0px;
+}
+    .subscribe-button {
+  width: 100px;
+  height: 30px;
+  font-size: 13px;
+}
+      .thirdpart {
+  height: 1000px;
+        flex-direction: row;
+        position: relative;
+}
+   .advantages {
+  height: 85%;
+  width: 85%;
+}
+    .tabs-button{
+        font-size: 20px;
+        padding-bottom: 7px
+    }
+    .salons-content {
+  width: 220px;
+  height: 350px;
+  margin-bottom: 40px;
+  border-radius: 30px;
+}
+    .wave{
+       border-radius: 30px; 
+    }
+
+.content-header {
+  font-size: 30px;
+  line-height: 45px;
+  margin-top: 25px;
+  margin-bottom: 17px;
+}
+.content-list {
+  margin-left: 1px;
+}
+.tabs-item {
+  font-size: 15px;
+    line-height: 21px;
+  margin-bottom: 15px;
+}
+    .time-section{
+        width: 10px;
+    }
+}
+@media(max-width:320px){
+     .item-link{
+        font-size: 10px;
+  margin-right: 15px;
+    }
+    .item-link:after {
+  height: 1px;
+}
+    .first-body {
+  height: 270px;
+  padding-top: 0px;
+}
+    .main-nav{
+    margin-right: 10px;
+        display: none;
+}
+    .logo{
+        margin-left: 0px;
+        margin-right: 50px;
+        margin-top: 30px;
+        font-size: 15px;
+    }
+
+    .header{
+        max-width: 320px;
+    }
+    .register-button{
+        font-size: 12px;
+        width: 100px;
+        height: 25px;
+        margin-top: 20px;
+        display: none;
+    }
+    .subheading{
+        margin-bottom: 20px;
+        margin-left: 15px;
+        font-size: 15px;
+        line-height: 20px;
+        max-width: 335px;
+    }
+    .more-button{
+        margin-left: 15px;
+        width: 120px;
+        height: 35px;
+        font-size: 15px;
+    }
+    .heading{
+        margin-left: 15px;
+        margin-top: 10px;
+        max-width: 300px;
+        font-size: 22px;
+        line-height: 30px;
+    }
+    .second-illustration{
+        top: 140px;
+        width: 80px;
+        right: 15px;
+    }
+    .secondpart{
+height: 230px;
+    }
+    .description{
+    }
+    .d-info{
+        width: 150px;
+        right: 50px;
+        width: 340px;
+    }
+    .d-heading{
+        font-size: 25px;
+        margin-bottom: 5px;
+        max-width: 320px;
+    }
+    .d-text{
+        font-size: 17px;
+        line-height: 30px;
+        max-width: 320px;
+    }
+    .smallimgs{
+width: 40px;
+        height: 40px;
+    }
+    .adv-header{
+        margin-bottom:13px;
+        font-size: 15px;
+    }
+    .third-heading{
+        font-size: 25px;
+        height: 15%;
+    }
+    .adv-text{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+        max-width: 120px;
+    }
+    .plane{
+width: 70%;
+    }
+    .contact{
+        height: 150px;
+    }
+    .contact-heading{
+        top: 100px;
+        font-size: 15px;
+        right: 8px;
+    }
+    .contact-btn{
+right: 10px;
+        width: 100px;
+        height: 30px;
+        font-size: 15px;
+    }
+     .register-block {
+  height: 200px;
+}
+    .tabs-button{
+font-size: 15px;
+    }
+    .register-heading {
+  font-size: 15px;
+  line-height: 30px;
+  max-width: 350px;
+  margin-bottom: 25px;
+}
+.register-btn {
+  width: 150px;
+  height: 40px;
+  font-weight: 300;
+  font-size: 20px;
+}
+  .instagram {
+  height: 250px;
+}
+.i-phone{
+    margin-right: 0px;
+    height: 50%;
+    width: 80px;
+margin-left: 10px;
+}
+.i-heading {
+  font-size: 18px;
+  line-height: 20px;
+    margin-bottom: 0px;
+}
+.i-text {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+    margin-bottom: 10px;
+}
+.instagram-text{
+    width: 220px;
+    margin-left: 0px;
+}
+    .subscribe-button {
+  width: 100px;
+  height: 30px;
+  font-size: 13px;
+}
+      .thirdpart {
+  height: 1000px;
+        flex-direction: row;
+        position: relative;
+}
+   .advantages {
+  height: 85%;
+  width: 85%;
+}
+    .tabs-button{
+        font-size: 20px;
+        padding-bottom: 7px
+    }
+    .salons-content {
+  width: 220px;
+  height: 350px;
+  margin-bottom: 40px;
+  border-radius: 30px;
+}
+    .wave{
+       border-radius: 30px; 
+    }
+
+.content-header {
+  font-size: 30px;
+  line-height: 45px;
+  margin-top: 25px;
+  margin-bottom: 17px;
+}
+.content-list {
+  margin-left: 1px;
+}
+.tabs-item {
+  font-size: 15px;
+    line-height: 21px;
+  margin-bottom: 15px;
+}
+    .time-section{
+        width: 10px;
+    }
+}
+@media(max-width:280px){
+     .item-link{
+        font-size: 10px;
+  margin-right: 15px;
+    }
+    .item-link:after {
+  height: 1px;
+}
+    .first-body {
+  height: 270px;
+  padding-top: 0px;
+}
+    .main-nav{
+    margin-right: 10px;
+        display: none;
+}
+    .logo{
+        margin-left: 0px;
+        margin-right: 50px;
+        margin-top: 30px;
+        font-size: 15px;
+    }
+
+    .header{
+        max-width: 320px;
+    }
+    .register-button{
+        font-size: 12px;
+        width: 100px;
+        height: 25px;
+        margin-top: 20px;
+        display: none;
+    }
+    .subheading{
+        margin-bottom: 20px;
+        margin-left: 10px;
+        font-size: 13px;
+        line-height: 20px;
+        max-width: 335px;
+    }
+    .more-button{
+        margin-left: 10px;
+        width: 120px;
+        height: 35px;
+        font-size: 15px;
+    }
+    .heading{
+        margin-left: 10px;
+        margin-top: 10px;
+        max-width: 260px;
+        font-size: 20px;
+        line-height: 30px;
+    }
+    .second-illustration{
+        top: 140px;
+        width: 80px;
+        right: 15px;
+    }
+    .secondpart{
+height: 200px;
+    }
+    .advantages{
+        width: 100%;
+    }
+    .description{
+    }
+    .d-info{
+        width: 150px;
+        right: 50px;
+        width: 280px;
+    }
+    .d-heading{
+        font-size: 23px;
+        margin-bottom: 5px;
+        max-width: 280px;
+    }
+    .d-text{
+        font-size: 15px;
+        line-height: 26px;
+        max-width: 280px;
+    }
+    .smallimgs{
+width: 40px;
+        height: 40px;
+        left: 3px;
+    }
+    .adv-header{
+        margin-bottom:13px;
+        font-size: 15px;
+    }
+    .third-heading{
+        font-size: 25px;
+        height: 15%;
+    }
+    .adv-text{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+        max-width: 120px;
+    }
+    .textdiv{
+        left: 3px;
+    }
+    .plane{
+width: 70%;
+    }
+    .contact{
+        height: 150px;
+    }
+    .contact-heading{
+        top: 100px;
+        font-size: 15px;
+        right: 8px;
+    }
+    .contact-btn{
+right: 10px;
+        width: 100px;
+        height: 30px;
+        font-size: 15px;
+    }
+     .register-block {
+  height: 200px;
+}
+    .tabs-button{
+font-size: 15px;
+    }
+.register-btn {
+  width: 150px;
+  height: 40px;
+  font-weight: 300;
+  font-size: 20px;
+}
+  .instagram {
+  height: 230px;
+}
+.i-phone{
+    margin-right: 0px;
+    height: 40%;
+    width: 70px;
+margin-left: 5px;
+}
+.i-heading {
+  font-size: 17px;
+  line-height: 20px;
+    margin-bottom: 0px;
+}
+.i-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 20px;
+    margin-bottom: 10px;
+}
+.instagram-text{
+    width: 195px;
+    margin-left: 0px;
+}
+    .subscribe-button {
+  width: 100px;
+  height: 30px;
+  font-size: 13px;
+}
+      .thirdpart {
+  height: 1000px;
+        flex-direction: row;
+        position: relative;
+}
+   .advantages {
+  height: 85%;
+  width: 90%;
+}
+    .tabs-button{
+        font-size: 20px;
+        padding-bottom: 7px
+    }
+    .salons-content {
+  width: 220px;
+  height: 350px;
+  margin-bottom: 40px;
+  border-radius: 30px;
+}
+    .wave{
+       border-radius: 30px; 
+    }
+
+.content-header {
+  font-size: 30px;
+  line-height: 45px;
+  margin-top: 25px;
+  margin-bottom: 17px;
+}
+.content-list {
+  margin-left: 1px;
+}
+.tabs-item {
+  font-size: 15px;
+    line-height: 21px;
+  margin-bottom: 15px;
+}
+    .time-section{
+        width: 10px;
+    }
+    .register-heading{
+font-size: 12px;
+        max-width: 250px
+    }
+    .vyxod{
+        font-size: 15px;
+        max-width: 250px;
+    }
+    .time-section{
+        width: 5px;
+    }
+}
